# ai-pipeline

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: pipeline-analyze.md  pipeline-cleanup.md  pipeline-implement.md  pipeline-loop.md  pipeline-propose.md  pipeline-run.md
.github/workflows/: ci.yml
ai-pipeline-vault/: HOME.md
ai-pipeline-vault/.obsidian/: workspace.json
ai-pipeline-vault/daily-logs/: 2026-04-18.md  2026-04-19.md  README.md
ai-pipeline-vault/retrospectives/: README.md
ai-pipeline-vault/workflows/: Workflow de desarrollo.md
configs/: default.yaml
docs/: README.md  architecture.md  signals-and-promotion.md  stage-0-features.md  stage-0-ingestion.md  stage-1-clustering.md  stage-2-training.md  stage-3-aggregation.md  stage-4-portfolio.md  stage-5-backtest.md
fmp-docs/: README.md  STABLE_INDEX.md  developer-docs-main.html  propuesta-endpoints.md
fmp-docs/stable/: 8k-latest.md  (+262 more)
scripts/: fmp_discover.py  mlflow_report.py  mlflow_runs_report.py  sync_fmp_docs.py
src/: config.py  db.py  keys.py
tests/: test_aggregation.py  test_backtest.py  test_calibration.py  test_clustering.py  test_confidence_penalty.py  test_config.py  test_features.py  test_mlflow_housekeeping.py  test_normalize.py  test_optimize_study_reload.py  test_pipeline_loop_merge.py  test_pipeline_loop_model_selection.py  test_pipeline_loop_state.py  test_portfolio_metrics.py  test_portfolio_optimizer.py  test_precision_eval.py  test_promotion.py  test_regime.py  test_stock_preservation.py
(+58 files in other folders)
